--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,63 @@
-.DS_Store
+# Created by .ignore support plugin (hsz.mobi)
+# SCM folders
+.svn
+# git
+.git
+*.orig
+# maven
+.mvn
+
+# Eclipse project files
+.classpath
+.project
+.settings/
+
+#Intellij idea
+.idea/
+/idea/
+application.pid
+*.ipr
+*.iml
+*.iws
+
+# java build folders
+bin/
+*.classes
+target/
+build/
+WEB-INF/lib
+WEB-INF/classes
+
+# node.js modules
 node_modules
-/dist
+package-lock.json
 
+# temp file
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+*.swp
+tmp/
+temp/
+log/
+logs/
 
-# local env files
-.env.local
-.env.*.local
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Package Files
+*.jar
+*.war
+*.ear
+*.tar.gz
+*.rar
+
+# system ignore
+.DS_Store
+Thumbs.db
+Desktop.ini
