--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "author": "e <yqiaochu@126.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --host 0.0.0.0 --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@zxing/library": "^0.19.1",
     "axios": "^0.24.0",
     "element-ui": "^2.15.6",
+    "vant": "^2.12.47",
     "vue": "^2.5.2",
+    "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -20,6 +23,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.13.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
