--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -47,6 +47,13 @@ http {
                index  index.html index.htm;
                try_files $uri $uri/ /index.html =404;
                client_max_body_size    100m;
+
+               proxy_set_header Host $host;
+               proxy_set_header X-Real-IP $remote_addr;
+               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+               proxy_set_header REMOTE-HOST $remote_addr;
+               #解决https请求http资源不可用的情况
+               add_header Content-Security-Policy upgrade-insecure-requests;
        }
 
        location ^~ /api/ {
