--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -58,7 +58,7 @@ http {
 
        location ^~ /api/ {
 #            proxy_pass http://101.132.40.172:8082/;
-           proxy_pass http://${server_name}:8082/;
+           proxy_pass http://zima.link:8082/;
            client_max_body_size    100m;
        }
 
