--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -43,7 +43,7 @@ http {
        ssl_certificate_key /etc/nginx/cert/zima.link.key;
 
        location / {
-               root   /usr/share/nginx/html;
+               root   /usr/share/nginx/html/naleme;
                index  index.html index.htm;
                try_files $uri $uri/ /index.html =404;
                client_max_body_size    100m;
@@ -67,6 +67,27 @@ http {
            root   html;
        }
    }
+
+   server {
+           listen       443;
+           server_name  fc.zima.link;
+
+           ssl_certificate /etc/nginx/cert/zima.link.pem;
+           ssl_certificate_key /etc/nginx/cert/zima.link.key;
+
+           location / {
+               root   html/fc/jsnes;
+               index  index.html index.htm;
+
+               #解决https请求http资源不可用的情况
+               add_header Content-Security-Policy upgrade-insecure-requests;
+           }
+
+           error_page   500 502 503 504  /50x.html;
+           location = /50x.html {
+               root   html;
+           }
+       }
 
 }
 
