--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,7 +45,9 @@ RUN rm /etc/nginx/nginx.conf
 # 把主机的nginx.conf文件复制到nginx容器的/etc/nginx文件夹下
 COPY ./docker/nginx.conf /etc/nginx/
 # 拷贝前端vue项目打包后生成的文件到nginx下运行
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-stage /app/dist /usr/share/nginx/html/naleme
+# 拷贝fc游戏项目
+COPY ../fc  /usr/share/nginx/html/
 
 # 暴露端口
 EXPOSE 80 443
