--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -76,7 +76,7 @@ http {
            ssl_certificate_key /etc/nginx/cert/zima.link.key;
 
            location / {
-               root   html/fc/jsnes;
+               root   html/nes/jsnes;
                index  index.html index.htm;
 
                #解决https请求http资源不可用的情况
