--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -69,7 +69,7 @@ http {
    }
 
    server {
-           listen       443;
+           listen       80 443;
            server_name  fc.zima.link;
 
            ssl_certificate /etc/nginx/cert/zima.link.pem;
