--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -69,7 +69,8 @@ http {
    }
 
    server {
-           listen       80 443;
+           listen       80
+           listen       443 ssl http2;
            server_name  fc.zima.link;
 
            ssl_certificate /etc/nginx/cert/zima.link.pem;
