--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -39,8 +39,8 @@ http {
        server_name zima.link;
 #        server_tokens off;
 
-       ssl_certificate /etc/nginx/cert/zima.link.pem;
-       ssl_certificate_key /etc/nginx/cert/zima.link.key;
+       ssl_certificate /etc/nginx/cert/zima.link/zima.link.pem;
+       ssl_certificate_key /etc/nginx/cert/zima.link/zima.link.key;
 
        location / {
                root   /usr/share/nginx/html/naleme;
@@ -73,8 +73,8 @@ http {
            listen       443 ssl http2;
            server_name  fc.zima.link;
 
-           ssl_certificate /etc/nginx/cert/zima.link.pem;
-           ssl_certificate_key /etc/nginx/cert/zima.link.key;
+           ssl_certificate /etc/nginx/cert/nes.zima.link/nes.zima.link.pem;
+           ssl_certificate_key /etc/nginx/cert/nes.zima.link/nes.zima.link.key;
 
            location / {
                root   /usr/share/nginx/html/nes/jsnes;
