--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -71,7 +71,7 @@ http {
    server {
            listen       80;
            listen       443 ssl http2;
-           server_name  fc.zima.link;
+           server_name  nes.zima.link;
 
            ssl_certificate /etc/nginx/cert/nes.zima.link/nes.zima.link.pem;
            ssl_certificate_key /etc/nginx/cert/nes.zima.link/nes.zima.link.key;
