--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /app
 COPY ./ .
 
 # 设置淘宝npm镜像
-RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
+RUN npm install -g cnpm --registry=https://registry.npmmirror.com
 # 安装依赖
 RUN cnpm install
 # 打包 - 目的：丢到nginx下跑
